--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="dimmer">#66000000</color>
+
+    <color name="divider_color">#66000000</color>
 </resources>
