--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="dimmer">#66000000</color>
 
     <color name="divider_color">#66000000</color>
+    <color name="color_light_blue">#00DDB6</color>
+    <color name="txt_color">#48495F</color>
 </resources>
