--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-
-    </data>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include
-            android:id="@+id/bg_layout"
-            layout="@layout/default_page_background" />
+<!--        <include-->
+<!--            android:id="@+id/bg_layout"-->
+<!--            layout="@layout/default_page_background" />-->
 
-        <com.scwang.smart.refresh.layout.SmartRefreshLayout
-            android:id="@id/smartRefresh"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/smartRefresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -26,7 +23,7 @@
                 android:overScrollMode="never"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </FrameLayout>
 
