--- a/app/src/main/res/layout/fragment_common_list.xml
+++ b/app/src/main/res/layout/fragment_common_list.xml
@@ -15,7 +15,7 @@
             layout="@layout/default_page_background" />
 
 
-        <com.scwang.smart.refresh.layout.SmartRefreshLayout
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -27,7 +27,7 @@
                 android:overScrollMode="never"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </FrameLayout>
 
