--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="separator_thickness">1dp</dimen>
     <dimen name="toolbar_logo_size">24dp</dimen>
     <dimen name="toolbar_logo_padding_end">24dp</dimen>
+
+    <dimen name="headerbar_elevation">4dp</dimen>
 </resources>
