--- a/app/src/main/res/layout/action_bar_title.xml
+++ b/app/src/main/res/layout/action_bar_title.xml
@@ -11,7 +11,7 @@
     >
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar_actionbar"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
