--- a/app/src/main/res/layout/fragment_reflow.xml
+++ b/app/src/main/res/layout/fragment_reflow.xml
@@ -8,17 +8,31 @@
 
     <TextView
         android:id="@+id/text_reflow"
-        android:layout_width="match_parent"
+        android:layout_width="0px"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:text="sdafsdf"
+        android:background="@color/green_100"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
+    <TextView
+        app:layout_constraintTop_toBottomOf="@id/text_reflow"
+        android:background="@color/blue_100"
+        android:text="test"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+<!--    <androidx.constraintlayout.widget.Barrier-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        -->
+<!--        />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
