--- a/base/src/main/res/layout/base_activity_base_fragment.xml
+++ b/base/src/main/res/layout/base_activity_base_fragment.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="?android:windowBackground">
 
-    <include layout="@layout/base_action_bar_title" />
+<!--    <include layout="@layout/base_action_bar_title" />-->
 
     <FrameLayout
         android:id="@+id/fragment_container"
