--- a/base/src/main/res/values/themes.xml
+++ b/base/src/main/res/values/themes.xml
@@ -54,4 +54,9 @@
 
         <!-- Spinner -->
     </style>
+
+    <style name="base_ToolbarTextAppearance" parent="base_ToolBarStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#000</item>
+    </style>
 </resources>
